--- a/v0.1/css/custom.css
+++ b/v0.1/css/custom.css
@@ -89,6 +89,11 @@ label {
   background-color: #000000;
 }
 
+.form-input-item {
+  font-family: helvetica, arial, sans-serif;
+  color: #000000;
+}
+
 footer {
   background: #000000;
   color: #fff;
