--- a/v0.1/css/custom.css
+++ b/v0.1/css/custom.css
@@ -4,8 +4,8 @@
 }
 
 body {
-  font-size: 14px;
   background-image: url(../img/grassEffectTramline.png);
+  font-size: 14px;
   background-position: left top;
   background-repeat: repeat;
   font-family: impact;
@@ -15,8 +15,57 @@ body, h1, h2, h3, h4, h5, h6 {
   /*font-family: helvetica, arial, sans-serif;*/
 }
 
+.navbar-default .nav-justified>li>a {
+  color: #FFFFFF;
+}
+
 .container {
   max-width: 1000px;
+}
+
+.selectedNavItem {
+  color: #37B34A !important;
+}
+
+.navbar {
+  max-width: 1000px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 0px;
+  text-transform: uppercase;
+  color: #FFFFFF;
+  background-color: #000000;
+  font-size: 24px;
+  border-radius: 0px;
+}
+
+.nav > li > a {
+  border-left-color: #FFFFFF;
+  border-left-width: 2px;
+  border-left-style:  solid;
+  border-right-color: #FFFFFF;
+  border-right-width: 2px;
+  border-right-style:  solid;
+}
+
+.nav > li:first-child > a {
+  border-left-color: #000000;
+}
+
+.nav > li:last-child > a {
+  border-right-color: #000000;
+}
+
+.navbar-default {
+  border-color: #FFFFFF;
+  border-bottom-width: 4px;
+  border-left-width: 0px;
+  border-right-width: 0px;
+}
+
+.navbar-collapse {
+  padding-right: 0px;
+  padding-left: 0px;
 }
 
 .main-logo {
@@ -110,6 +159,7 @@ footer {
     font-size: 32px;
     margin-bottom: 20px;
   }  
+  
   .main-logo {
     width: 100%;
   }
