--- a/v0.1/css/myTeam.css
+++ b/v0.1/css/myTeam.css
@@ -1,21 +1,23 @@
 .col-md-2 {
 	padding-right: 0em;
-	padding-left: 2em;
+	padding-left: 0em;
 }
 
 .col-sm-2 {
 	padding-right: 0em;
-	padding-left: 2em;
+	padding-left: 0em;
+	margin-left: -2em;
 }
 
 .col-md-3 {
 	padding-right: 0px;
 	padding-left: 0px;
+	/*margin-right: 2em;*/
 }
 
 .col-sm-3 {
 	padding-right: 0px;
-	padding-left: 0px;
+	padding-left: 2em;
 }
 
 .col-md-7 {
@@ -32,6 +34,22 @@
 	background-color: #FFFFFF;
 }
 
+.player {
+	float: left;
+	text-align: center;
+	width: 20%;
+}
+
+.playerName {
+	text-align: center;
+	color: #000000;
+	width: 80%;
+	margin-right: auto;
+	margin-left: auto;
+	font-size: 16px;
+	font-weight: normal;
+}
+
 .firstElevenSelection {
 	background-image: url(../img/pitch.png);
 	background-position: left top;
@@ -43,13 +61,19 @@
 
 .subRowHeader {
 	text-transform: uppercase;
+	text-align: center;
 	font-size: 24px;
-	padding-left: 0.7em;
+	padding-left: 0em;
 	padding-top: 1.25em;
+	margin-right: 0px;
+	margin-left: 0px;
 }
 
 .subRow {
 	padding-top: 2em;
+	margin-left: 0px;
+	margin-right: 0px;
+	text-align: center;
 }
 
 #goalkeeper {
@@ -57,21 +81,52 @@
 }
 
 #defenders {
-	padding-top: 5em;
+	padding-top: 1em;
 }
 
 #midfielders {
-	padding-top: 5em;
+	padding-top: 1em;
 }
 
 #strikers {
-	padding-top: 5em;
+	padding-top: 1em;
 	padding-bottom: 5em
 }
 
 .positionRow {
-	width: 100%;
-	margin-left: 3.3em;
+	width: 80%;
+	margin-left: 2.25em;
+}
+
+.subs {
+	border-right: thin solid #000000;
+}
+
+.teamDetails {
+	padding-top: 1em;
+	margin-left: 0px;
+	margin-right: 0px;
+	margin-bottom: 2em;
+	font-size: 18px;
+}
+
+.teamName {
+	text-transform: uppercase;
+	text-align: center;
+	font-size: 30px;
+	color: #37B34A;
+}
+
+.teamDetailLabel {
+	float: left;
+}
+
+.teamScore {
+	float: right;
+}
+
+.leaguePosition {
+	float: right;
 }
 
 .notApplicablePosition {
