--- a/v0.1/css/leagueTable.css
+++ b/v0.1/css/leagueTable.css
@@ -1,10 +1,16 @@
+table, th, td, tr {
+	border: 1px solid black !important;
+}
+
 .leagueTable {
 	margin-top: 2.5%;
-	font-size: 18px;
+	font-family: fira;
+	font-size: 18px;	
 	text-transform: uppercase;
 }
 
 .leagueName {
+	background-color: #000000;
 	color: #FFFFFF;
 	font-weight: normal !important;
 }
@@ -20,11 +26,16 @@
 }
 
 .leagueTableTeam {
-	color: #FFFFFF;
+	color: #000000;
 }
 
 .teamPosition {
+	background-color: #37B34A;
 	text-align: center;
+}
+
+.feature-photo {
+	margin-top: 5%;
 }
 
 @media screen and (max-width: 480px) {
